lwcSuperBudge/force-app/main/default/objects/Invoices__x/fields/billDate__c.field-meta.xml
<CustomField>
    <fullName>billDate__c</fullName>
    <description>billDate</description>
    <externalDeveloperName>billDate</externalDeveloperName>
    <label>BillDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>