lwcSuperBudge/force-app/main/default/objects/Invoices__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>id</description>
    <externalDeveloperName>id</externalDeveloperName>
    <label>Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>