lwcSuperBudge/force-app/main/default/objects/Invoices__x/fields/projectRef__c.field-meta.xml
<CustomField>
    <fullName>projectRef__c</fullName>
    <description>projectRef</description>
    <externalDeveloperName>projectRef</externalDeveloperName>
    <label>ProjectRef</label>
    <length>128</length>
    <referenceTargetField>Project__c.ProjectRef__c</referenceTargetField>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>IndirectLookup</type>
</CustomField>